# LegoTechnicSimulation

./: .gitignore  README.md  motor_two_stage_sim.py  pyproject.toml  render_assembly.sh  render_cycle_animations.sh  render_cycle_gifs.sh  setup_env.py  walker1_cycle_front.webm  walker1_cycle_persp.webm  walker1_cycle_side.webm  walker1_drivetrain.py  walker1_drivetrain_pres.webm
.github/: copilot-instructions.md
lego_technic_sim/: __init__.py  cli.py  mujoco_export.py
lego_technic_sim/blender/: __init__.py  assembly_animation.py  drivetrain_animation.py  exporter.py  geometry.py
lego_technic_sim/ldraw/: __init__.py  model.py  parser.py
lego_technic_sim/physics/: __init__.py  connection_ports.py  connectors.py  drive_train.py  gears.py  mesh_properties.py  model.py  motor_detection.py  unit_builder.py
sample_models/Walker1/: simulation.py
tests/: test_blender_exporter.py  test_cli.py  test_connection_ports.py  test_connector_joints.py  test_fixtures.py  test_ldraw_parser.py  test_mesh_properties.py  test_motor_detection.py  test_unit_builder.py  test_walker1_integration.py
tests/fixtures/: README.md  friction_pin.ldr  frictionless_pin.ldr  gear_mesh.ldr  motor_gear.ldr  motor_gear_mesh.ldr  motor_two_stage.ldr  pin_connection.ldr  render_fixtures.sh  two_bricks_adjacent.ldr  two_bricks_separated.ldr
