[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-technic-sim"
version = "0.1.0"
description = "Physical simulation of Lego Technic builds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
lego-technic-sim = "lego_technic_sim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
